--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,5 +23,33 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+}
 
+/* navigation links */
+#menue {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menue ,#logo {
+    line-height: 75px;
+}
+
+#menue li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#menue a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menue a:hover {
+border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
