--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ border-bottom: 1px solid #3a3a3a;
 }
 
 
-/*hero image */
+/*hero image  and cover-text*/
 #hero-image {
     height: 600px;
     width: 100%;
@@ -66,13 +66,15 @@ border-bottom: 1px solid #3a3a3a;
     animation-fill-mode: forwards;
 }
 
-
-
-
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    position: relative;
+}
+
+#cover-text, #cover-text h2 {
+    color:#fff;
 }
 
 /* create the level of zoom for hero image */
@@ -85,6 +87,21 @@ transform: scale(1.1);
     }
 }
 
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(241, 109, 107, 0.7);
+    bottom:30px;
+    right:150px;
+    position:absolute;
+}
 
 
 
