--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation links */
@@ -102,6 +103,32 @@ transform: scale(1.1);
     right:150px;
     position:absolute;
 }
+
+/* club ethos */
+#club-ethos {
+    height:  600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    float: left;
+    width: 33%;
+    background-color: aqua;
+}
+
+#right-about {
+    padding-top: 30px;
+    float: right;
+    width: 33%;
+    background-color: antiquewhite;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: gold;
+}
+
 
 
 
