--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,6 @@ transform: scale(1.1);
     padding-top: 30px;
     float: left;
     width: 33%;
-    background-color: aqua;
 }
 
 #right-about {
@@ -128,6 +127,41 @@ transform: scale(1.1);
     margin: 0 auto;
     background-color: gold;
 }
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading{
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+
+
+
+
 
 
 
