--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,16 @@ hr {
     border-radius: 50%;
 }
 
+/*   time events */
 
+#times {
+    background-image: url("../images/dublin-city.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+}
 
 
 
