--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,21 @@ hr {
     overflow: hidden;
 }
 
+#times div {
+    color: #f2f2f2;
+    background-color: rgba(0, 0, 0, .6);
+    width: 20%;
+    float: left;
+    height: 300px;
+    padding: 30px 0 0 10px;
+    box-sizing: border-box;
+    border:2px solid white;
+    text-align: center;
+}
 
+#times h2{
+    color: #f2f2f2;
+}
 
 
 
