--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,27 @@ hr {
     color: #f2f2f2;
 }
 
+/* footer */
 
+footer {
+    height: 150px;
+}
+
+.social-networks {
+    text-align: center;
+    
+}
+
+.social-networks > li {
+display: inline;
+
+}
+
+.social-networks a {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
 
 
