--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,3 +240,87 @@ display: inline;
 #photos > img{
     width: 100%;;
 }
+
+/* responsive for tablet and max-width 1200px */
+
+@media screen and (max-width:1200px) {
+#club-rethos {
+    width: 65%;
+    height: 1200px;
+    margin: 0 auto;
+}    
+
+#welcome {
+    padding: 30px 0;
+    margin: 0;
+}
+
+#left-about, #right-about {
+    width: 100%;
+    float: left;
+    padding: 0;
+}
+
+#center-about {
+    clear: both;
+    width: 100%;
+    float: left;
+    padding: 0;
+}
+
+hr {
+    display: none;
+}
+
+}
+
+/* for medium screen sizes from 950px and down */
+ 
+@media screen  and (max-width: 950px) {
+    #menue {
+        clear: left;
+        float: left;
+        padding-left: 30px;
+        padding-bottom: 20px;
+        line-height: 25px;
+    }
+
+    #cover-text {
+        left: 0;
+    }
+
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .right-about-heading, .left-about-heading {
+        width: inherit;
+    }
+
+    .right-about-heading h2, .left-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .right-about-heading p, .left-about-heading p {
+        text-align: center;
+        padding: 0 50px;
+    }
+
+
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
