--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,10 +317,18 @@ hr {
         padding: 0 50px;
     }
 
-
-    
+    #photos {
+        column-count: 3;
+    } 
 }
 
+
+/* for small screen down to 800px */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+}
 
 
 
