--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,7 +330,19 @@ hr {
     }
 }
 
+/* signup form */
 
+.form-section {
+    clear: left;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/formbg.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+}
+
+.signup-form {
+    margin: 150px 10% ;
+}
 
 
 
